src/yafl.h

/*=============================================================================
               Basic UD-factorized Kalman filter Definitions
=============================================================================*/
typedef struct _yaflKalmanBaseSt yaflKalmanBaseSt;
typedef yaflStatusEn (* yaflKalmanFuncP)(yaflKalmanBaseSt *, yaflFloat *, \
                                         yaflFloat *);
typedef yaflStatusEn (* yaflKalmanResFuncP)(yaflKalmanBaseSt *, yaflFloat *, \
                                            yaflFloat *, yaflFloat *);
typedef yaflStatusEn (* yaflKalmanScalarUpdateP)(yaflKalmanBaseSt *, yaflInt);
/*
Function pointer for robust versions of filters.

Based on:
1. West M., "Robust Sequential Approximate Bayesian Estimation",
   J. R. Statist. Soc. B (1981), 43, No. 2, pp. 157-166

2. Gaver, Donald Paul; Jacobs, Patricia A., "Robustifying the Kalman filter",
   Naval Postgraduate School technical report. 1987
   http://hdl.handle.net/10945/30147
*/
typedef yaflFloat (* yaflKalmanRobFuncP)(yaflKalmanBaseSt *, yaflFloat);
struct _yaflKalmanBaseSt {
    yaflKalmanFuncP f;       /*A state transition function*/
    yaflKalmanFuncP h;       /*A measurement function*/
    yaflKalmanResFuncP zrf;  /*Measurement residual function function*/

    yaflFloat * x;  /*State vector*/
    yaflFloat * y;  /*Innovation vector*/

    yaflFloat * Up; /*Upper triangular part of P*/
    yaflFloat * Dp; /*Diagonal part of P*/

    yaflFloat * Uq; /*Upper triangular part of Q*/
    yaflFloat * Dq; /*Diagonal part of Q*/

    yaflFloat * Ur; /*Upper triangular part of R*/
    yaflFloat * Dr; /*Diagonal part of R*/

    yaflInt   Nx;   /*State vector size*/
    yaflInt   Nz;   /*Measurement vector size*/
};
/*=============================================================================
                    Basic UD-factorized EKF definitions
=============================================================================*/
typedef struct _yaflEKFBaseSt yaflEKFBaseSt;
struct _yaflEKFBaseSt {
    yaflKalmanBaseSt base; /*Base type*/

    yaflKalmanFuncP jf; /*Jacobian of a state transition function*/
    yaflKalmanFuncP jh; /*Jacobian of a measurement function*/

    yaflFloat * H;   /*Measurement Jacobian values*/
    yaflFloat * W;   /*Scratchpad memory block matrix*/
    yaflFloat * D;   /*Scratchpad memory diagonal matrix*/
};
/*---------------------------------------------------------------------------*/
yaflStatusEn yafl_ekf_base_predict(yaflKalmanBaseSt * self);
yaflStatusEn yafl_ekf_base_update(yaflKalmanBaseSt * self, yaflFloat * z, \
                                  yaflKalmanScalarUpdateP scalar_update);
static inline yaflStatusEn \
    yafl_ekf_do_not_use_this_update(yaflEKFAdaptiveSt * self, yaflFloat * z)
{
    return yafl_ekf_base_update((yaflKalmanBaseSt *)self, z, \
                                yafl_ekf_do_not_use_this_update_scalar);
}
/*=============================================================================
                    Robust UD-factorized EKF definitions
=============================================================================*/
/*
Based on:
1. West M., "Robust Sequential Approximate Bayesian Estimation",
   J. R. Statist. Soc. B (1981), 43, No. 2, pp. 157-166

2. Gaver, Donald Paul; Jacobs, Patricia A., "Robustifying the Kalman filter",
   Naval Postgraduate School technical report. 1987
   http://hdl.handle.net/10945/30147
*/
typedef struct {
    yaflEKFBaseSt base;
    yaflKalmanRobFuncP g;    /* g = -d(ln(pdf(y))) / dy */
    yaflKalmanRobFuncP gdot; /* gdot = G = d(g) / dy */
} yaflEKFRobustSt; /*Robust EKF*/
/*
Used to add delta vectors to initial point in sigma point generation.
Parameters:
yaflFloat * x0
yaflFloat * delta_x
yaflFloat factor

Does:
delta_x = x0 + factor * delta_x
*/
typedef yaflStatusEn (* yaflUKFSigmaAddP)(yaflUKFBaseSt *, yaflFloat *, \
                                          yaflFloat *, yaflFloat);
/*Sigma point generator info base type*/
typedef struct _yaflUKFSigmaSt {
    yaflInt         np; /* The number of sigma points          */
    yaflUKFSigmaAddP addf; /* Sigma point addition function       */
} yaflUKFSigmaSt;
/*---------------------------------------------------------------------------*/
/* Computes sigma points weights */
typedef yaflStatusEn (* yafkUKFSigmaGenWeigthsP)(yaflUKFBaseSt *);
/* Generates sigma points */
typedef yaflStatusEn (* yaflUKFSigmaGenSigmasP)(yaflUKFBaseSt *);
typedef struct _yaflUKFSigmaMethodsSt {
    yafkUKFSigmaGenWeigthsP   wf; /* Weight function                */
    yaflUKFSigmaGenSigmasP  spgf; /* Sigma point generator function */
} yaflUKFSigmaMethodsSt;
/*---------------------------------------------------------------------------*/
struct _yaflUKFBaseSt {

    yaflKalmanBaseSt base;

    /* A pointer to the sigma point generator structure */
    yaflUKFSigmaSt               * sp_info;
    /* A sigma point generator method table pointer     */
    const yaflUKFSigmaMethodsSt  * sp_meth;

    yaflKalmanFuncP    xmf; /* State mean function              */
    yaflKalmanResFuncP xrf; /* State residual function function */

    yaflKalmanFuncP    zmf; /* Measurement mean function function    */
    yaflFloat * zp; /* Predicted measurement vector */

    /*Scratchpad memory*/
    yaflFloat * Sx;  /* State       */
    yaflFloat * Pzx; /* Pzx cross covariance matrix */

    yaflFloat * sigmas_x; /* State sigma points       */
    yaflFloat * sigmas_z; /* Measurement sigma points */
    yaflFloat * wm;       /* Weights for mean calculations       */
    yaflFloat * wc;       /* Weights for covariance calculations */
};
/*---------------------------------------------------------------------------*/
static inline yaflStatusEn yafl_ukf_post_init(yaflUKFBaseSt * self)
{
    YAFL_CHECK(self,              YAFL_ST_INV_ARG_1);
    YAFL_CHECK(self->sp_meth,     YAFL_ST_INV_ARG_1);
    YAFL_CHECK(self->sp_meth->wf, YAFL_ST_INV_ARG_1);
    return self->sp_meth->wf(self); /*Need to compute weights before start*/
}
static inline yaflStatusEn yafl_ukf_gen_sigmas(yaflUKFBaseSt * self)
{
    YAFL_CHECK(self,                YAFL_ST_INV_ARG_1);
    YAFL_CHECK(self->sp_meth,       YAFL_ST_INV_ARG_1);
    YAFL_CHECK(self->sp_meth->spgf, YAFL_ST_INV_ARG_1);
    self->sp_meth->spgf(self);
    return self->sp_meth->wf(self);
}
yaflStatusEn yafl_ukf_base_predict(yaflUKFBaseSt * self);
yaflStatusEn yafl_ukf_base_update(yaflUKFBaseSt * self, yaflFloat * z, \
                                  yaflKalmanScalarUpdateP scalar_update);
/*---------------------------------------------------------------------------*/
YAFL_UKF_PREDICT_WRAPPER(yafl_ukf_adaptive_bierman_predict, yaflUKFAdaptivedSt)
YAFL_UKF_UPDATE_IMPL(yafl_ukf_adaptive_bierman_update, yaflUKFAdaptivedSt)

/*=============================================================================
                           Robust Bierman UKF
=============================================================================*/
typedef yaflFloat (* yaflUKFRobFuncP)(yaflUKFBaseSt *, yaflFloat);
typedef struct {
    yaflUKFBaseSt base;
    yaflKalmanRobFuncP g;    /* g = -d(ln(pdf(y))) / dy */
    yaflKalmanRobFuncP gdot; /* gdot = G = d(g) / dy */
} yaflUKFRobustSt; /*Robust UKF*/
/*---------------------------------------------------------------------------*/
YAFL_UKF_PREDICT_WRAPPER(yafl_ukf_predict, yaflUKFSt)
yaflStatusEn yafl_ukf_update(yaflUKFBaseSt * self, yaflFloat * z);
/*=============================================================================
        Full adaptive UKF, not sequential square root version of UKF
=============================================================================*/
typedef struct {
    yaflUKFSt base; /* Base type                   */
    yaflFloat chi2; /*Divergence test threshold (chi-squared criteria)*/
} yaflUKFFullAdapiveSt;
yaflStatusEn yafl_ukf_adaptive_update(yaflUKFBaseSt * self, yaflFloat * z);
/*=============================================================================
                     Van der Merwe sigma point generator
=============================================================================*/
typedef struct _yaflUKFMerweSt {
    yaflUKFSigmaSt base;
    yaflFloat alpha;
    yaflFloat beta;
    yaflFloat kappa;
} yaflUKFMerweSt;
/*---------------------------------------------------------------------------*/
const yaflUKFSigmaMethodsSt yafl_ukf_merwe_spm;